--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src"
   },
   "dependencies": {
     "next": "12.0.9",
@@ -15,9 +15,12 @@
   "devDependencies": {
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.9",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "^4.5.5"
   }
 }
