--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@typescript-eslint/parser": "^5.10.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.9",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "2.5.1",
     "typescript": "^4.5.5"
   }
 }
