--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "React Avançado - Boilerplate",
-  "short_name": "React Avançado",
+  "name": "Boilerplate - gabrielqueirozdev",
+  "short_name": "Boilerplate",
   "icons": [
     {
       "src": "/img/icon-192.png",
@@ -12,9 +12,9 @@
       "sizes": "512x512"
     }
   ],
-  "background_color": "#06092B",
+  "background_color": "#0D0D3A",
   "description": "Boilerplate utilizando TypeScript, React, NextJS e Styled Components",
   "display": "fullscreen",
   "start_url": "/",
-  "theme_color": "#06092B"
+  "theme_color": "#0D0D3A"
 }
