--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src --max-warnings=0",
     "prepare": "husky install",
     "test": "jest",
+    "generate": "yarn plop --plopfile ./generators/plopfile.js",
     "test:watch": "yarn test --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -54,6 +55,7 @@
     "jest": "^27.5.1",
     "jest-styled-components": "^7.0.8",
     "lint-staged": "^12.3.3",
+    "plop": "^3.0.5",
     "prettier": "2.5.1",
     "typescript": "^4.5.5"
   }
